@@ -71,3 +71,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/libical/icalmemory.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/libical/icalperiod.c;  cvs diff -u -r 1.2.2.54 -r 1.2.2.55 src/vcal_folder.c;  cvs diff -u -r 1.1.2.50 -r 1.1.2.51 src/vcal_manager.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/vcal_manager.h;  cvs diff -u -r 1.1.2.50 -r 1.1.2.51 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.2.2.46 -r 1.2.2.47 src/vcalendar.c;  ) > 1.91.0cvs13.patchset
 ( cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/plugin.c;  cvs diff -u -r 1.1.2.51 -r 1.1.2.52 src/vcal_manager.c;  ) > 1.91.0cvs14.patchset
 ( cvs diff -u -r 1.2.2.55 -r 1.2.2.56 src/vcal_folder.c;  ) > 1.91.0cvs15.patchset
+( cvs diff -u -r 1.1.2.52 -r 1.1.2.53 src/vcal_manager.c;  ) > 1.91.0cvs16.patchset
